[gd_scene load_steps=22 format=3 uid="uid://ckjjhqjgx3mbq"]

[ext_resource type="Texture2D" uid="uid://b15ds2nddrxff" path="res://Project/20_assets/20_sprite/EmptyHealth-1.png" id="1_7227t"]
[ext_resource type="Texture2D" uid="uid://ctlbl6nhe38fy" path="res://Project/20_assets/20_sprite/FullHealth-1.png" id="1_x7d0a"]
[ext_resource type="Script" path="res://Project/10_scripts/health_bar.gd" id="3_756eu"]
[ext_resource type="Texture2D" uid="uid://c4b76sft57gfk" path="res://Project/20_assets/20_sprite/bossbar_empty.svg" id="4_ck5hi"]
[ext_resource type="Texture2D" uid="uid://siqlilfmxe8p" path="res://Project/20_assets/20_sprite/EmptyBloode-1.png" id="4_jr1ht"]
[ext_resource type="Texture2D" uid="uid://dhcusnaee3ell" path="res://Project/20_assets/20_sprite/bossbar_full.svg" id="5_25r54"]
[ext_resource type="Texture2D" uid="uid://d3np72dijbm4i" path="res://Project/20_assets/20_sprite/FullBloode-1.png" id="5_f57l8"]
[ext_resource type="Texture2D" uid="uid://dge3su2jdb6tc" path="res://Project/20_assets/20_sprite/coffee_empty.png" id="6_0pbta"]
[ext_resource type="Texture2D" uid="uid://b1yei7s0dgg5g" path="res://Project/20_assets/20_sprite/HealthAndBloodBar_TExture.png" id="6_aja4d"]
[ext_resource type="Texture2D" uid="uid://dkofftarsg4nx" path="res://Project/20_assets/20_sprite/debt.png" id="7_ln3fy"]
[ext_resource type="Texture2D" uid="uid://d4evfh3p0lcr0" path="res://Project/20_assets/20_sprite/coffee.png" id="7_qfsj3"]
[ext_resource type="Texture2D" uid="uid://dnkqy46jnunve" path="res://Project/20_assets/20_sprite/ciggy_empty.png" id="8_3sula"]
[ext_resource type="Texture2D" uid="uid://b6kwjol3es44g" path="res://Project/20_assets/20_sprite/ciggy full.png" id="9_kxe3g"]
[ext_resource type="FontFile" uid="uid://cpe4wpkxm2nvb" path="res://Project/20_assets/40_fonts/Stabby Bold.ttf" id="10_ukovi"]
[ext_resource type="Script" path="res://Project/10_scripts/inventory.gd" id="15_18ifr"]
[ext_resource type="Texture2D" uid="uid://c5fmwdyvdlcse" path="res://Project/20_assets/20_sprite/inventorybase.png" id="15_vnupj"]
[ext_resource type="Texture2D" uid="uid://dsv1dq1tq8sb1" path="res://Project/20_assets/20_sprite/ciggy_drop.png" id="16_gyr88"]
[ext_resource type="Texture2D" uid="uid://c8hknc215k18n" path="res://Project/20_assets/20_sprite/choccybar.png" id="17_ypt1c"]
[ext_resource type="Texture2D" uid="uid://dbf7s6od6hr2i" path="res://Project/20_assets/20_sprite/MEAT_drop.png" id="18_l83sh"]
[ext_resource type="Texture2D" uid="uid://chst88ggu27du" path="res://Project/20_assets/20_sprite/coffee_drop.png" id="19_n137d"]

[sub_resource type="LabelSettings" id="LabelSettings_vsep1"]
font = ExtResource("10_ukovi")
font_size = 59
font_color = Color(0.0823529, 0.00392157, 0.00784314, 1)
outline_size = 2
outline_color = Color(1, 0, 0, 1)

[node name="CanvasLayer" type="CanvasLayer"]
follow_viewport_enabled = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_direction = 1
layout_mode = 1
offset_right = 2663.0
offset_bottom = 625.0
scale = Vector2(0.2, 0.2)
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="CanvasLayer2" type="CanvasLayer" parent="Control/MarginContainer"]

[node name="bloode" type="TextureProgressBar" parent="Control/MarginContainer/CanvasLayer2"]
texture_filter = 1
offset_left = -25.0
offset_top = 3.0
offset_right = 2588.0
offset_bottom = 578.0
scale = Vector2(0.211316, 0.207173)
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("4_jr1ht")
texture_progress = ExtResource("5_f57l8")
metadata/_edit_use_anchors_ = true

[node name="health" type="TextureProgressBar" parent="Control/MarginContainer/CanvasLayer2"]
texture_filter = 1
offset_left = -33.0
offset_top = 1.0
offset_right = 2580.0
offset_bottom = 576.0
scale = Vector2(0.23, 0.23)
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("1_7227t")
texture_progress = ExtResource("1_x7d0a")
script = ExtResource("3_756eu")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Control"]
layout_mode = 2
offset_left = 972.0
offset_top = 608.0
offset_right = 1141.0
offset_bottom = 636.0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Label" type="Label" parent="Control/HBoxContainer2"]
z_index = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.619608, 0.0901961, 0.188235, 1)
theme_override_fonts/font = ExtResource("10_ukovi")
theme_override_font_sizes/font_size = 32
text = "- Â£999999987.97"

[node name="MarginContainer2" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -303.0
offset_top = -325.0
offset_right = 1188.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.554398, 0.554398)
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("7_ln3fy")

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 2
offset_left = 9.0
offset_top = 116.0
offset_right = 109.0
offset_bottom = 164.0
size_flags_horizontal = 0
metadata/_edit_use_anchors_ = true

[node name="coffee" type="TextureProgressBar" parent="Control/HBoxContainer"]
layout_mode = 2
value = 50.0
fill_mode = 3
texture_under = ExtResource("6_0pbta")
texture_progress = ExtResource("7_qfsj3")

[node name="ciggy" type="TextureProgressBar" parent="Control/HBoxContainer"]
layout_mode = 2
value = 65.0
fill_mode = 3
texture_under = ExtResource("8_3sula")
texture_progress = ExtResource("9_kxe3g")

[node name="Label" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 829.0
offset_top = 79.0
offset_right = 1141.0
offset_bottom = 121.0
theme_override_font_sizes/font_size = 20
text = "GRADULOUS THE BICTH FUCKER"

[node name="bossbar" type="TextureProgressBar" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0625
anchor_top = 0.00308642
anchor_right = 0.989852
anchor_bottom = 0.108981
offset_right = 1207.0
offset_bottom = 77.38
grow_horizontal = 0
scale = Vector2(0.47, 0.47)
value = 100.0
fill_mode = 1
texture_under = ExtResource("4_ck5hi")
texture_progress = ExtResource("5_25r54")
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]
layer = 2
visible = false

[node name="TextureRect" type="TextureRect" parent="Control/CanvasLayer"]
visible = false
z_index = 1
offset_left = 4.0
offset_top = 4.0
offset_right = 2617.0
offset_bottom = 579.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_aja4d")

[node name="MarginContainer3" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -184.0
offset_right = 367.0
grow_vertical = 0
script = ExtResource("15_18ifr")

[node name="CanvasLayer" type="CanvasLayer" parent="Control/MarginContainer3"]

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer3/CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -308.0
offset_right = 2613.0
offset_bottom = 267.0
grow_vertical = 0
scale = Vector2(0.520001, 0.542704)
size_flags_horizontal = 0
size_flags_vertical = 8
texture = ExtResource("15_vnupj")

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer3/CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 98.0767
offset_top = 418.276
offset_right = 610.077
offset_bottom = 930.276
scale = Vector2(0.289221, 0.289221)
texture = ExtResource("16_gyr88")

[node name="TextureRect2" type="TextureRect" parent="Control/MarginContainer3/CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 211.538
offset_top = 331.673
offset_right = 723.538
offset_bottom = 843.673
scale = Vector2(0.252154, 0.252154)
texture = ExtResource("17_ypt1c")

[node name="TextureRect3" type="TextureRect" parent="Control/MarginContainer3/CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 107.692
offset_top = 226.643
offset_right = 619.692
offset_bottom = 738.643
scale = Vector2(0.252154, 0.252154)
texture = ExtResource("18_l83sh")

[node name="TextureRect4" type="TextureRect" parent="Control/MarginContainer3/CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 17.3077
offset_top = 327.987
offset_right = 529.308
offset_bottom = 839.987
scale = Vector2(0.252154, 0.252154)
texture = ExtResource("19_n137d")

[node name="Label" type="Label" parent="Control/MarginContainer3/CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 186.538
offset_top = 313.246
offset_right = 226.538
offset_bottom = 364.246
text = "3"
label_settings = SubResource("LabelSettings_vsep1")

[node name="Label2" type="Label" parent="Control/MarginContainer3/CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 317.307
offset_top = 385.109
offset_right = 357.307
offset_bottom = 436.109
text = "1"
label_settings = SubResource("LabelSettings_vsep1")

[node name="Label3" type="Label" parent="Control/MarginContainer3/CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 111.538
offset_top = 398.007
offset_right = 151.538
offset_bottom = 449.007
text = "1"
label_settings = SubResource("LabelSettings_vsep1")

[node name="Label4" type="Label" parent="Control/MarginContainer3/CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 215.384
offset_top = 499.352
offset_right = 255.384
offset_bottom = 550.352
text = "1"
label_settings = SubResource("LabelSettings_vsep1")

[connection signal="value_changed" from="Control/MarginContainer/CanvasLayer2/health" to="Control/MarginContainer/CanvasLayer2/health" method="_on_value_changed"]
